mp.yml
apiVersion: v1
kind: Pod
metadata:
  name: greet-pod
  labels:
    app: flask-greet
spec:
  containers:
  - name: flask-container
    image: dineshdk07/myapp:latest
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: flask-greet
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: flask-greet
