ng.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
  labels:
    app: flask-hello
spec:
  containers:
  - name: flask-container
    image: satulakhil/frontend:React
    ports:
    - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-hello
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: flask-hello

---
apiVersion: v1
kind: Pod
metadata:
  name: greet-pod
  labels:
    app: flask-greet
spec:
  containers:
  - name: flask-container
    image: dineshdk07/myapp:latest
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: flask-greet
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: flask-greet
---
apiVersion: v1
kind: Pod
metadata:
  name: details-pod
  labels:
    app: flask-details
spec:
  containers:
  - name: flask-container
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: flask-details
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: flask-details
