test.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
  labels:
    app: flask-hello
spec:
  containers:
  - name: flask-container
    image: satulakhil/frontend:React
    resources:
      requests:
        memory: "800Mi"
        cpu: "1Gi"
      limits:
        memory: "800Mi"
        cpu: "1Gi"
    ports:
    - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-hello
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: flask-hello
