Namebasedingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: foo.akhil.cloud
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: flask-hello
            port:
              number: 80
  - host: bar.akhil.cloud
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: flask-details
            port:
              number: 80
