ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress-rules
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: flask-hello
            port:
              number: 80
      - path: /alexa
        pathType: Prefix
        backend:
          service:
            name: flask-greet
            port:
              number: 80
      - path: /details
        pathType: Prefix
        backend:
          service:
            name: flask-details
            port:
              number: 80
